<resources>
    <string name="app_name">SMSAMS</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_message">No account yet? Create one.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="done_register">Already registered! Login me.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_item_home">home</string>
    <string name="drawer_item_app_settings">App Setting</string>
    <string name="drawer_item_account_settings">Account Setting</string>
    <string name="drawer_item_statistic">Statistic</string>
    <string name="map">Map</string>
    <string name="analyze_soil">Analyze Soil</string>
    <string name="logout">Logout</string>
    <string name="title_activity_analyze_soil">AnalyzeSoilActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="title_activity_app_setting">AppSettingActivity</string>
    <string name="title_activity_account_setting">AccountSettingActivity</string>
    <string name="analyze">Analyze</string>
    <string name="mahlogo">mahlogo</string>
    <string name="Welcome">Welcome</string>
    <string name="SMSAMS">SMSAMS</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="SoilList">Soil Data List</string>
    <string name="SortBy">Sort By:</string>
    <string name="DateTimeAdded">Date Time Added</string>
    <string name="HighToLowest">Highest to Lowest</string>
    <string name="Type">Type</string>
    <string name="LocationToAZ">Location to A-Z</string>
    <string name="loc_enabled">Location Enabled</string>
    <string name="loc_disabled">Location Disabled</string>
    <string name="arduino_connected">Connected</string>
    <string name="arduino_not_connected">Not Connected</string>
    <string name="area_list">Area List</string>
    <string name="info">View</string>
    <string name="statistic">Statistic</string>
    <string name="complete">Proceed</string>
    <string name="run_analyze">Run Analyze</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="change_your_password">Change Your Password:</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="edit_your_name">Edit Your Name:</string>
    <string name="public_list">View Public List</string>
    <string name="content">Content</string>

</resources>
