<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.admin123.smsams.activity.MapsActivity">


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_account_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_anim_button_analyse"
            android:text="@string/save"
            android:textColor="@color/cast_expanded_controller_progress_text_color" />

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:text="@string/edit_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="30sp"
            android:layout_marginBottom="15dp"
            android:textAlignment="viewStart" />

        <TextView
            android:text="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textSize="18sp" />

        <TextView
            android:text="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textSize="18sp" />

        <TextView
            android:text="@string/change_your_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="30sp"
            android:layout_marginBottom="15dp"
            android:textAlignment="viewStart" />

        <TextView
            android:text="@string/oldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_oldpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textSize="18sp" />

        <TextView
            android:text="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_newpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textSize="18sp"
            android:inputType="textPassword" />

        <TextView
            android:text="@string/re_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textSize="18sp"
            android:inputType="textPassword" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>





